2009-07-13  Omair Majid  <omajid@redhat.com>

	* rt/net/sourceforge/jnlp/JNLPFile.java
	(JNLPFile): Delegate to the Version-based constructor.
	(JNLPFile): New constructor.
	(JNLPFile): Modified to take an additional version argument used in
	downloading the JNLP file.
	(openURL): Take an additional version argument and use when downloading 
	the URL.
	* rt/net/sourceforge/jnlp/Launcher.java
	(toFile): Use the new JNLPFile constructor.
	* rt/net/sourceforge/jnlp/cache/Resource.java
	(Resource): Rearrange argument order.
	(getResource): Likewise. Fix parameters to constructor.
	* rt/net/sourceforge/jnlp/cache/ResourceTracker.java
	(addResource): Fix arguments to Resource.getResource.
	* rt/net/sourceforge/jnlp/runtime/JNLPClassLoader.java
	(getInstance): Take additional version argument and use it when creating a
	JNLPFile.
	(initializeExtensions): Use the extension version when requesting a 
	JNLPClassLoader.

2009-07-10  Deepak Bhole  <dbhole@redhat.com>

	* Makefile.am: Update makefile to pick up plugin C++ files from new
	location.
	* plugin/icedtea/sun/applet/PluginMessageConsumer.java  : Minor typo fix.
	* plugin/icedteanp/IcedTeaJavaRequestProcessor.cc: New file. Processes
	requests from JS/C++ side to JavaSide.
	* plugin/icedteanp/IcedTeaJavaRequestProcessor.h: New file. Header for
	IcedTeaJavaRequestProcessor.cc.
	* plugin/icedteanp/IcedTeaNPPlugin.cc: Modified to work with the new
	MessageBus archtecture for the new plugin. Also, moved from top level 
	directory.
	* plugin/icedteanp/IcedTeaNPPlugin.h: New file. Header for
	IcedTeaNPPlugin.cc.
	* plugin/icedteanp/IcedTeaPluginRequestProcessor.cc: New file. Processes 
    plugin data requests from Java side.
	* plugin/icedteanp/IcedTeaPluginRequestProcessor.h: new file. Header for
	IcedTeaPluginRequestProcessor.cc.
	* plugin/icedteanp/IcedTeaPluginUtils.cc: New file. Utility functions for
	the rest of the plugin code.
	* plugin/icedteanp/IcedTeaPluginUtils.h: New file. Header for
	IcedTeaPluginUtils.cc.